--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://dashboard202209.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
